discussion/kv_engine/177080/177080_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46738: Make dcp_conn_buffer_ratio dynamic

The config param was already declared dynamic, but then we missed to
reflect config changes into the cached FlowControl state.

With this patch the cbepctl path is complete.

Change-Id: Idaa45a7f6c039c30793b03c1ab33a0517d948f51

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-07-07 15:45:09.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-07 17:02:39.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18848/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.cc:53:29: error: out-of-line definition of "newConsumer" does not match any declaration in "DcpFlowControlManager" [clang-diagnostic-error]
void DcpFlowControlManager::newConsumer(gsl::not_null<DcpConsumer*> consumer) {
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.cc:61:29: error: out-of-line definition of "handleDisconnect" does not match any declaration in "DcpFlowControlManager" [clang-diagnostic-error]
void DcpFlowControlManager::handleDisconnect(
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:38:22: error: expected parameter declarator [clang-diagnostic-error]
    void newConsumer(gsl::not_null<DcpConsumer*> consumer);
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:38:22: error: use of undeclared identifier "gsl" [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:38:50: error: expected ")" [clang-diagnostic-error]
    void newConsumer(gsl::not_null<DcpConsumer*> consumer);
                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:38:21: note: to match this "("
    void newConsumer(gsl::not_null<DcpConsumer*> consumer);
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:40:27: error: expected parameter declarator [clang-diagnostic-error]
    void handleDisconnect(gsl::not_null<DcpConsumer*> consumer);
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:40:27: error: use of undeclared identifier "gsl" [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:40:55: error: expected ")" [clang-diagnostic-error]
    void handleDisconnect(gsl::not_null<DcpConsumer*> consumer);
                                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:40:26: note: to match this "("
    void handleDisconnect(gsl::not_null<DcpConsumer*> consumer);
                         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18848/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.cc:53:29:
error: out-of-line definition of "newConsumer" does not match any declaration in "DcpFlowControlManager" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18848/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40033/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:38:22:
error: use of undeclared identifier "gsl"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40033/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19989/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [42/160]: file stats post warmup...../kv_engine/engines/ep/tests/ep_testsuite.cc:2323 Test failed: `" (Expected `394445" to be less than or equal to `372736" - Unexpected fileSize for vbucket)
[2022-07-07T16:34:43.295Z] (520 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19989/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21792/ : FAILURE

ThreadSanitizer issue: data race /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/cookie.cc:207 in Cookie::getRequest() const  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21792/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21103/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [45/160]: mem stats...../kv_engine/engines/ep/tests/ep_testsuite.cc:2157 Test failed: `" (Expected `5200", got `5120" - Expected ep_value_size to remain the same after item is loaded from disk)
[2022-07-07T16:33:03.597Z] (152 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21103/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21103/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18005/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47659/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8628/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29144/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8531/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20746/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
